--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 </div>
 
                 <div class="command-output-section">
-                    <h3>Part 2 (Remaining Commands)</h3>
+                    <h3>Part 2</h3>
                     <textarea id="command-output-2" rows="8" readonly></textarea>
                     <button class="copy-button" data-target="command-output-2">Copy Part 2</button>
                 </div>
