--- a/index.html
+++ b/index.html
@@ -193,21 +193,34 @@
          #data-table td:nth-child(2) {
              width: 15%;
          }
+         #data-table th:last-child {
+            width: 60%;
+         }
 
-         #data-table th:last-child,
+
+        /* ---- NEW, CORRECTED DATA TABLE STYLING ---- */
         #data-table td:last-child {
-            white-space: nowrap;     /* Prevents the cell's content from wrapping */
-            overflow: hidden;        /* Hides any content that overflows the cell's width */
-            max-width: 0;            /* A trick to make this work reliably in tables */
-            cursor: text;            /* Changes the cursor to a text-select cursor on hover */
+            /* The max-width trick still applies to the cell itself */
+            max-width: 0;
         }
 
-
         #data-table td pre {
+            /* Common styles for all <pre> tags in the table */
             margin: 0;
             padding: 0;
+        }
+
+        #data-table td:not(:last-child) pre {
+            /* Apply wrapping ONLY to <pre> tags in cells that are NOT the last child */
             white-space: pre-wrap;
             word-wrap: break-word;
+        }
+
+        #data-table td:last-child pre {
+            /* Apply non-wrapping and overflow styles ONLY to the <pre> in the LAST cell */
+            white-space: nowrap;
+            overflow: hidden;
+            cursor: text;
         }
     </style>
 </head>
