--- a/index.html
+++ b/index.html
@@ -394,11 +394,11 @@ $welcome-message Settings made with NuttyB Configurator https://rcorex.github.io
         // Define labels of options to be selected by default (if not mandatory or hidden)
         const defaultSelectedLabels = [
             // 'Mini Bosses', // Now handled by the Extra Raptors dropdown default
-            'Cross Faction 70% T2 Tax', // Corresponds to !bset tweakdefs6
-            'T3 Eco Builtin', // Corresponds to !bset tweakdefs7
+            'Cross Faction T2', // Corresponds to !bset tweakdefs6
+            'T3 Eco', // Corresponds to !bset tweakdefs7
             'T3 Builders', // Corresponds to !bset tweakdefs8
             'Unit Launchers', // Corresponds to !bset tweakdefs9
-            'LRPC rebalance v2', // Corresponds to !bset tweakunits6
+            'LRPC Rebalance v2', // Corresponds to !bset tweakunits6
             'Legion NuttyB Evolving Commander', // Added back for default selection logic
             'Armada NuttyB Evolving Commander', // Added back for default selection logic
             'Cortex NuttyB Evolving Commander', // Added back for default selection logic
