--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
         h1, h2 {
             color: #f5f5f5; /* Lighter heading text */
+            margin-top: 8px; /* --- NEW: Reduce space above headings --- */
+            margin-bottom: 8px; /* --- NEW: Standardize space below headings --- */
         }
 
         a {
@@ -110,7 +112,6 @@
             vertical-align: middle;
         }
         
-        /* --- NEW --- */
         /* Override default browser styling for the disabled, checked "Main Tweaks" box */
         input[type="checkbox"]:disabled:checked {
             appearance: none;
@@ -135,7 +136,6 @@
             transform: translate(-50%, -50%);
             line-height: 0;
         }
-        /* --- END NEW --- */
 
 
         /* Style for Dropdowns (Selects) */
